# my-tax

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: auth_password.py  auth_sms.py  income_cancel.py  income_create.py  income_list.py  invoice_create.py  invoice_list_cancel.py  payment_methods.py  redis_session.py
src/my_tax/: __init__.py  _auth.py  _client.py  _helpers.py  _http.py  _transport.py  clients.py  constants.py  exceptions.py  logger.py  types.py
src/my_tax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/my_tax/api/: __init__.py  _base.py  _income.py  _invoice.py  _payment_method.py  _user.py  base.py  user.py
src/my_tax/domain/: exceptions.py
src/my_tax/domain/entites/: __init__.py  auth.py  user.py
src/my_tax/enums/: general.py  income.py  invoice.py
src/my_tax/types/: __init__.py  _base.py  auth.py  income.py  invoice.py  payment_method.py  user.py
tests/: conftest.py  test_auth.py  test_client.py  test_exceptions.py  test_helpers.py
tests/test_api/: test_income_api.py  test_invoice_api.py
tests/test_types/: test_auth_types.py  test_base.py  test_income.py  test_invoice.py  test_payment_method.py
