[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-tax"
version = "0.1.2"
description = "HTTP client for lknpd.nalog.ru API (sync and async, password and phone SMS auth)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "pytz>=2025.1",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
